Fixed view-content div on science apps grid issue. The footer div was overlapping with it when viewport width less than 790px

--- a/css/araport.css
+++ b/css/araport.css
@@ -591,3 +591,11 @@ h2 {
 }
 
 /* End styling for new content */
+
+/* Begin styling for science apps grid */
+    /* Fix for overlapping divs */
+.view-science-apps-catalog .view-content {
+    overflow:auto;
+    width:100%;
+}
+/* End styling for science apps grid */
